<resources>
    <string name="app_name">My Application5</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="register">Register</string>
    <string name="desired_username">Username</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="enter_profession">Enter your profession</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_contactno">Enter your contact number</string>
    <string name="select_age_group">Select Age Group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
