<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">


        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lastname"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/enter_your_first_name"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/desired_username"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Username"
            android:layout_below="@+id/Username"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:singleLine="true">

        </EditText>

        <EditText
            android:id="@+id/ConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Pass"
            android:layout_below="@+id/Pass"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ConfirmPass"
            android:layout_below="@+id/ConfirmPass"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/enter_profession"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Username"
            android:layout_below="@+id/firstname"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profession"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/enter_your_age"
            android:inputType="phone"
            android:singleLine="true" />
        <EditText
            android:id="@+id/mobno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/enter_your_contactno"
            android:inputType="phone"
            android:singleLine="true" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobno"
            android:layout_marginTop="20dp"
            android:text="Register"></Button>
            <!--android:onClick="RegisterUser"/>-->




    </RelativeLayout>



</ScrollView>